Add data to salon, movie display, remove and edit

--- a/BookerPortal.Web/Components/EditItems/EditBooker/EditItemBooker.razor
+++ b/BookerPortal.Web/Components/EditItems/EditBooker/EditItemBooker.razor
@@ -1,4 +1,4 @@
-﻿@using Request.HTTP
+﻿@using Request.HTTP.RequestService.IRequestService
 @using Request.HTTP.DTO.MovieTheatreDTO
 @using System.Net.Http
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
