--- a/BookerPortal.Web/Components/EditItems/EditSalon/RemoveItemSalon.razor
+++ b/BookerPortal.Web/Components/EditItems/EditSalon/RemoveItemSalon.razor
@@ -1,12 +1,12 @@
-﻿@using Request.HTTP
+﻿@using Request.HTTP.RequestService.IRequestService
 @using Request.HTTP.DTO.MovieTheatreDTO
 @using System.Net.Http
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @rendermode InteractiveServer
-@inject IBookerService BookerService
+@inject ISalonService SalonService
 
 <td>
-    <button class="btn btn-danger" @onclick="RemoveBooker">
+    <button class="btn btn-danger" @onclick="RemoveSalon">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
             <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
         </svg>
@@ -16,16 +16,16 @@
 
 @code {
     [Parameter]
-    public BookerDTO bookerDTO { get; set; }
+    public SalonDTO salonDTO { get; set; }
     [Parameter]
     public EventCallback<int> OnRemove { get; set; }
 
 
-    private async Task RemoveBooker()
+    private async Task RemoveSalon()
     {
         try
         {
-            await BookerService.RemoveBookerById(bookerDTO.Id);
+            await SalonService.RemoveSalonById(salonDTO.ID);
             await OnRemove.InvokeAsync();
 
         }
