--- a/Booking.View/Components/BookingReceipt.razor
+++ b/Booking.View/Components/BookingReceipt.razor
@@ -33,7 +33,7 @@
     public BookerDTO booker { get; set; }
 
     [Parameter]
-    public ReservationDto reservation { get; set; }
+    public ReservationDTO reservation { get; set; }
 
     // [Parameter]
     // public ReceiptDTO receipt { get; set; }
