--- a/BookerPortal.Web/Components/Pages/Booking.razor
+++ b/BookerPortal.Web/Components/Pages/Booking.razor
@@ -1,7 +1,7 @@
 ﻿@page "/booking"
-@using Request.HTTP
+@using Request.HTTP.RequestService.IRequestService
 @using Request.HTTP.DTO.MovieTheatreDTO
-@using BookerPortal.Web.Components.ReUseUI
+@using BookerPortal.Web.Components.EditItems.EditBooker
 @rendermode InteractiveServer
 @inject IBookerService BookerService
 @attribute [StreamRendering]
@@ -32,7 +32,7 @@
                                 <td><input @bind="item.LastName" /></td>
                                 <td><input @bind="item.Email" /></td>
                                 <td><input @bind="item.PhoneNumber" /></td>
-                                <EditItem bookerDTO="item" OnEdited=@OnEdited></EditItem>
+                                <EditItemBooker bookerDTO="item" OnEdited=@OnEdited></EditItemBooker>
                             }
                             else
                             {
@@ -47,7 +47,7 @@
                                                 <path d="M12.354 1.646a.5.5 0 0 1 0 .708l-9 9a.5.5 0 0 1-.708-.708l9-9a.5.5 0 0 1 .708 0zm-1.708.708L3 11.5v1.5a.5.5 0 0 0 .5.5H5l9.146-9.146-1.5-1.5z" />
                                             </svg>
                                         </button>
-                                        <RemoveItem bookerDTO="item" OnRemove=@OnRemove></RemoveItem>
+                                        <RemoveItemBooker bookerDTO="item" OnRemove=@OnRemove></RemoveItemBooker>
                                     </div>
       
                                 </td>
@@ -104,17 +104,6 @@
         {
             bookers = await bookerService.GetBooker();
 
-            if (bookers != null)
-            {
-                for (int i = bookers.Count - 1; i >= 0; i--)
-                {
-                    var booker = bookers[i];
-                    if (booker == null || string.IsNullOrWhiteSpace(booker.Name) || string.IsNullOrWhiteSpace(booker.LastName) || string.IsNullOrWhiteSpace(booker.Email) || string.IsNullOrWhiteSpace(booker.PhoneNumber))
-                    {
-                        bookers.RemoveAt(i);
-                    }
-                }
-            }
         }
         catch (Exception ex)
         {
