--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/RemoveItemMovie.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/RemoveItemMovie.razor
@@ -3,10 +3,10 @@
 @using System.Net.Http
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @rendermode InteractiveServer
-@inject ISalonService SalonService
+@inject IMovieService movieService
 
 <td>
-    <button class="btn btn-danger" @onclick="RemoveSalon">
+    <button class="btn btn-danger" @onclick="RemoveMovie">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
             <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
         </svg>
@@ -16,16 +16,16 @@
 
 @code {
     [Parameter]
-    public SalonDTO salonDTO { get; set; }
+    public MovieDTO movieDTO { get; set; }
     [Parameter]
     public EventCallback<int> OnRemove { get; set; }
 
 
-    private async Task RemoveSalon()
+    private async Task RemoveMovie()
     {
         try
         {
-            await SalonService.RemoveSalonById(salonDTO.ID);
+            await movieService.RemoveMovieById(movieDTO.ID);
             await OnRemove.InvokeAsync();
 
         }
