--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Movie.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Movie.razor
@@ -1,9 +1,9 @@
 ﻿@page "/movie"
 @using Request.HTTP.RequestService.IRequestService
 @using Request.HTTP.DTO.MovieTheatreDTO
-@using BookerPortal.Web.Components.EditItems.EditMovie
+@using BookerPortal.Web.Components.EditItems.MovieTheatreEdit.EditMovie
 @rendermode InteractiveServer
-@inject IMovieService MovieService
+@inject IMovieService movieService
 @attribute [StreamRendering]
 <PageTitle>Filmer</PageTitle>
 
@@ -66,9 +66,21 @@
     private bool isEditMode;
     private int selectedId = 0;
 
+    private async Task LoadMovies()
+    {
+        try
+        {
+            movies = await movieService.GetMovie();
 
-    [Inject]
-    private IMovieService movieService { get; set; }
+
+        }
+        catch (Exception ex)
+        {
+            errorMessage = "An error occurred while retrieving data. Please try again later.";
+
+            Console.WriteLine($"Error: {ex.Message}");
+        }
+    }
 
     protected override async Task OnInitializedAsync()
     {
@@ -97,21 +109,7 @@
         isEditMode = true;
 
     }
-    public async Task LoadMovies()
-    {
-        try
-        {
-            movies = await movieService.GetMovie();
 
-          
-        }
-        catch (Exception ex)
-        {
-            errorMessage = "An error occurred while retrieving data. Please try again later.";
-
-            Console.WriteLine($"Error: {ex.Message}");
-        }
-    }
 }
 
 
