--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Salon.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Salon.razor
@@ -1,9 +1,9 @@
 ﻿@page "/salon"
 @using Request.HTTP.RequestService.IRequestService
 @using Request.HTTP.DTO.MovieTheatreDTO
-@using BookerPortal.Web.Components.EditItems.EditSalon
+@using BookerPortal.Web.Components.EditItems.MovieTheatreEdit.EditSalon
 @rendermode InteractiveServer
-@inject ISalonService SalonService
+@inject ISalonService salonService
 @attribute [StreamRendering]
 <PageTitle>Bokningar</PageTitle>
 
@@ -65,9 +65,20 @@
     private bool isEditMode;
     private int selectedId = 0;
 
+    private async Task LoadSalons()
+    {
+        try
+        {
+            salon = await salonService.GetSalon();
 
-    [Inject]
-    private ISalonService salonService { get; set; }
+        }
+        catch (Exception ex)
+        {
+            errorMessage = "An error occurred while retrieving data. Please try again later.";
+
+            Console.WriteLine($"Error: {ex.Message}");
+        }
+    }
 
     protected override async Task OnInitializedAsync()
     {
@@ -95,20 +106,6 @@
         selectedId = salonDTO.ID;
         isEditMode = true;
 
-    }
-    public async Task LoadSalons()
-    {
-        try
-        {
-            salon = await salonService.GetSalon();
-
-        }
-        catch (Exception ex)
-        {
-            errorMessage = "An error occurred while retrieving data. Please try again later.";
-
-            Console.WriteLine($"Error: {ex.Message}");
-        }
     }
 }
 
