Minor changes to display edit/remove data ui.

--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/RemoveItemMovie.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/RemoveItemMovie.razor
@@ -25,7 +25,7 @@
     {
         try
         {
-            await movieService.RemoveMovieById(movieDTO.ID);
+            await movieService.RemoveMovieById(movieDTO.Id);
             await OnRemove.InvokeAsync();
 
         }
