--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Reservation.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Reservation.razor
@@ -13,10 +13,9 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Email</th>
-                    <th>Booked seats</th>
                     <th>Show id</th>
-                    <th>Reservation time</th>
+                    <th>Booked seats</th>
+                    <th>BookerId</th>
                     <th> </th>
                 </tr>
             </thead>
@@ -28,16 +27,17 @@
                         <tr>
                             @if (isEditMode && selectedId == item.Id)
                             {
-                                <td><input @bind="item.BookedSeats" /></td>
+                                
                                 <td><input @bind="item.ShowId" /></td>
-                                <td><input @bind="item.ReservationTime" /></td>
+                                <td><input @bind="item.BookedSeats" /></td>
+                                <td><input @bind="item.BookerId" /></td>
                                 <EditItemReservation reservationDTO="item" OnEdited=@OnEdited></EditItemReservation>
                             }
                             else
                             {
-                                <td class="smooth-text">@item.BookedSeats</td>
                                 <td class="smooth-text">@item.ShowId</td>
-                                <td class="smooth-text">@item.ReservationTime</td>
+                                <td class="smooth-text">@item.BookedSeats</td>
+                                <td class="smooth-text">@item.BookerId</td>
                                 <td>
                                     <div style="display:flex">
                                         <button class="btn btn-warning" @onclick="() => SetEditMode(item)" style="margin-right:10px">
