--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditReservation/RemoveItemReservation.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditReservation/RemoveItemReservation.razor
@@ -16,7 +16,7 @@
 
 @code {
     [Parameter]
-    public ReservationDTO reservationDTO { get; set; }
+    public PresentReservationDTO reservationDTO { get; set; }
     [Parameter]
     public EventCallback<int> OnRemove { get; set; }
 
